--- a/1_Requirements/.md
+++ b/1_Requirements/.md
@@ -1,4 +1,5 @@
 # INTRODUCTION:
 The "Contact Management System" has been developed to override the problems prevailing in the practicing manual system. This software is supported to eliminate and
 in some cases reduce the hardships faced by this existing system. Moreover this system is designed for the particular need of the company to carry out operations in a
-smooth and effective manner.
+smooth and effective manner. Every organization, whether big or small, has challenges to overcome and managing the information of Credential, Contact, Profile, Mobile, Emails. Every Contact Management System has different Contact needs, therefore we design exclusive employee management systems that are adapted to your managerial requirements.
+This is designed to assist in strategic planning, and will help you ensure that your organization is equipped with the right level of information and details for your future goals.
