--- a/1_Requirements/.md
+++ b/1_Requirements/.md
@@ -3,3 +3,36 @@ The "Contact Management System" has been developed to override the problems prev
 in some cases reduce the hardships faced by this existing system. Moreover this system is designed for the particular need of the company to carry out operations in a
 smooth and effective manner. Every organization, whether big or small, has challenges to overcome and managing the information of Credential, Contact, Profile, Mobile, Emails. Every Contact Management System has different Contact needs, therefore we design exclusive employee management systems that are adapted to your managerial requirements.
 This is designed to assist in strategic planning, and will help you ensure that your organization is equipped with the right level of information and details for your future goals.
+
+# RESEARCH:
+Generally, many people in the various fields are based on the contact management system for their daily activities. People can use this application to perform various operations based on the user's choice such as adding,  deleting, searching and list the contacts.
+Functions:
+1) Adding Contacts 
+2) Deleting Contacts
+3) Contact Search
+4) Displaying Contact List
+Addition :
+Get the input for Name, Mobile Number and Email.
+Validate
+Check whether the Name should contains alphabets only.
+Check whether the Mobile number should contains numbers and exactly 10 digits.
+
+# SWOT analysis:
+Strengths: User-friendly, perform complex operations, less time consumption.
+Weakness: As the features of the contact dairy decrease then the memory of the contact system decrease.
+Opportunities: Most of the contacts are done using dairy. We can overcome this method by using the contact managaement system.
+Threats: Some limits has been there for the most complex problems which the contact management system can't do.
+
+# 4’W and 1’H
+Who: Anyone who needs the use of contact management system like students, teachers, banks.
+What: Contact management system Application.
+Where: School, industries, Banking sectors.
+When: Need for contact storing.
+How: Gets the user input and gives the output.
+# High level Requirements
+|`      `*ID|`                 `Description|`            `Status*|
+| :- | :- | :- |
+|`    `HL01|` `Electricity bill calculation at Urban areas if(units<30) | Implemented |
+|`    `HL02|` `Electricity bill calculation at Urban areas if(units>30 && units <100)| Implemented |
+|`    `HL03|` `Electricity bill calculation at Urban areas if(units>101 && units <200) | Implemented |
+|`    `HL04|` `Electricity bill calculation at Urban areas if(units<200)| Implemented |
