--- a/1_Requirements/.md
+++ b/1_Requirements/.md
@@ -13,26 +13,43 @@ Functions:
 4) Displaying Contact List
 Addition :
 Get the input for Name, Mobile Number and Email.
+
 Validate
+
 Check whether the Name should contains alphabets only.
+
 Check whether the Mobile number should contains numbers and exactly 10 digits.
 
 # SWOT analysis:
 Strengths: User-friendly, perform complex operations, less time consumption.
+
 Weakness: As the features of the contact dairy decrease then the memory of the contact system decrease.
+
 Opportunities: Most of the contacts are done using dairy. We can overcome this method by using the contact managaement system.
+
 Threats: Some limits has been there for the most complex problems which the contact management system can't do.
 
 # 4’W and 1’H
 Who: Anyone who needs the use of contact management system like students, teachers, banks.
+
 What: Contact management system Application.
+
 Where: School, industries, Banking sectors.
+
 When: Need for contact storing.
+
 How: Gets the user input and gives the output.
 # High level Requirements
 |`      `*ID|`                 `Description|`            `Status*|
 | :- | :- | :- |
-|`    `HL01|` `Electricity bill calculation at Urban areas if(units<30) | Implemented |
-|`    `HL02|` `Electricity bill calculation at Urban areas if(units>30 && units <100)| Implemented |
-|`    `HL03|` `Electricity bill calculation at Urban areas if(units>101 && units <200) | Implemented |
-|`    `HL04|` `Electricity bill calculation at Urban areas if(units<200)| Implemented |
+|`    `HL01|` `Add the contacts | Implemented |
+|`    `HL02|` `Search the contacts | Implemented |
+|`    `HL03|` `List the contacts  | Implemented |
+|`    `HL04|` `Delete the contacts| Implemented |
+# Low level  Requirements
+
+|`      `*ID|`                 `Description|`            `Status*|
+| :- | :- | :- |
+|LL01\_HL01|` `Contact Management system adds the name | Implemented |
+|LL02\_HL02|` `Contact Management system adds the email id|Implemented |
+|LL03\_HL03|` `Contact Management system list the contacts|Implemented |
