--- a/1_Requirements/.md
+++ b/1_Requirements/.md
@@ -11,10 +11,12 @@ Functions:
 2) Deleting Contacts
 3) Contact Search
 4) Displaying Contact List
+
 Addition :
+
 Get the input for Name, Mobile Number and Email.
 
-Validate
+Validate :
 
 Check whether the Name should contains alphabets only.
 
